
This file contains information about the version numbers
and what's changed.
Hopefully, the #defines ETHERIP_MAYOR and ETHERIP_MINOR
in ether_ipApp/src/drvEtherIP.h are updated accordingly,
so that you can see the current version at runtime via
drvEtherIP_report.

* 2005, 01/28  V2.9
Driver's delay in disconnecting/reconnecting could be almost
zero in some cases. Now fixed to ~5 secs.

* 2004, 10/06  V2.8
The "-w" flag of ether_ip_test didn't pack the REAL value,
so it didn't work on all CPU types.

Tag parsing changes. Take this setup:
  Nested NESTED;
  DATATYPE Nested
     BOOL BOOLs[32];
     REAL REALs[2];
     TestStruct STRUCTS[5]
  DATATYPE TestStruct
     INT INT;
     REAL REAL;
     DINT DINT;
     BIT BOOL;
(RSLogix actually adds some pads that are omitted in here)

This one worked: 'NESTED.REALs[1]'
Access to this one failed: 'NESTED.STRUCTs[1].REAL',
since in general sub-elements of arrays weren't handled.
This has been fixed.

* 2004, 8/27  V2.7
Changes from Stephanie Allison:
Replaced the registration via a static class instance's
constructor with a DBD file registrar() entry.
Removed some compiler warnings from usage of "size_t"
in printf formats.

* 2004, 8/3  V2.6
The SNS was using a patched versions of 2.5 that included
error messages for the case that the clock jumps:
The scheduling is based on the current time as
reported by epicsTimeGetCurrent(). A 1 second scan list
schedules itself for the time of the last run + 1 second.
A jump in time to e.g. 1 month in the future would trick the driver,
thinking that the last run was one month in the future and
the next run is that one month ahead (plus 1 second).

Now, the code attempts some reset in case of running into
that error.

* 2004, 3/17 V2.5
The timing was wrong under R3.13, keeping the driver thread
from sleeping. The code always uses the R3.14-type epicsTimeStamp,
epicsTimeGetCurrent, epicsThreadSleep etc.  When running under
R3.13, compatibility code implements the missing R3.14 routines.