@@ -17,7 +17,8 @@ drvEtherIP_init()
 # To get to the PLC itself, we need the slot that
 # it resides in. The first, left-most slot in the
 # ControlLogix crate is slot 0.
-drvEtherIP_define_PLC("plc1", "172.31.72.94", 0)
+#drvEtherIP_define_PLC("plc1", "172.31.72.94", 0)
+drvEtherIP_define_PLC("plc1", "172.31.74.78", 0)
 EIP_verbosity(7)
 
 #dbLoadRecords("db/ramp.db",    "IOC=test")
@@ -30,7 +31,8 @@ EIP_verbosity(7)
 #dbLoadRecords("db/ao.db",      "PLC=plc1,IOC=test")
 #dbLoadRecords("db/bo.db",      "PLC=plc1,IOC=test")
 #dbLoadRecords("db/mbbo.db",    "PLC=plc1,IOC=test")
-dbLoadRecords("../../db/test.db", "PLC=plc1,IOC=test")
+#dbLoadRecords("../../db/test.db", "PLC=plc1,IOC=test")
+dbLoadRecords("../../db/mod.db", "PLC=plc1,IOC=test")
 
 iocInit()
 
