@@ -10,6 +10,9 @@ drvEtherIP_report.
 * 2005, 01/28  V2.9
 Driver's delay in disconnecting/reconnecting could be almost
 zero in some cases. Now fixed to ~5 secs.
+Buffer code rejects requests for buffers >> PLC buffer limit,
+trying to avoid memory trouble.
+Turned optimization off.
 
 * 2004, 10/06  V2.8
 The "-w" flag of ether_ip_test didn't pack the REAL value,
